  logged in (Mark)
- Enhanced gallery_remote2.php to support F-SPOT Gallery export (Mark)
- Fixed bug where the global edit of 'enable_postcards' failed.
  (bug #0000294) (Mark)
- Fixed bug where email did not properly send for uploads and postcards (Mark)

Polls Plugin
------------
- Fixed XHTML compliance issue (Mark)

Site Tailor Plugin
------------------
- Implemented the hmenu and vmenu auto tags (Mark)
- Fixed issue where color was not properly used (Eric)
- Improved instance cache operations when editing a menu element (Mark)
- Improved handling of missing plugins when associated with a menu item (Mark)
- Fixed 'Display After' not showing proper entries when editing a second
  level menu (Mark)
- Fixed issue where a blank URL would always have http:// added to the
  beginning of the string (Mark)



StaticPages Plugin
------------------
- Improved handling of disabled plugins when there is a menu item that
  points to it. (Mark)
- Fixed bug where sub-menus did not display the correct items in the
  display after field (Mark)
- Do not add http:// to blank URLs (Mark)
- Made editor window larger when using advanced editor (Mark)
- Ability to delete pages from admin list (Mark)
- Do not include pages with sp_search set to 0 in stats (Mark)


v1.1.1
------
- Bumped version number to v1.1.1 (Mark)
        public_html/lib-common.php
        public_html/admin/install/index.php

- Fixed bug where contacting a user would try to redirect to profile page
  when profileloginrequired = true (Mark)
        public_html/profiles.php

- Added rdf_file to the fusionrescue.php fields (Mark)
        public_html/admin/install/fusionrescue.php

- Fixed IE6 bug with the block menus (Eric)
        public_html/javascript/sitetailor_ie6vertmenu.js

- Fixed issue with openbase_dir restrictions when processing mime types (Mark)
        private/lib/getid3/getid3.lib.php

- Added new multi-byte function: MBYTE_is_utf8() returns true if a valid
  utf-8 string (Mark)