@@ -1,0 +1,22 @@
+<script type="text/javascript">
+    document.getElementById('sitetailor').style.display='';
+window.addEvent('load',function() {
+    var myValidator = new fValidator("clonemenu");
+});
+</script>
+  <div class="glfform">
+    <form method="post" action="{form_action}" id="clonemenu">
+    <div>
+      <div class="required">
+        <label for="menuname">{$LANG_ST01[clone_menu_label]}:</label>
+        <input class="fValidate['required']" type="text" id="menuname" name="menuname" size="48" value="{menuname}"{xhtml}>
+      </div>
+    <div style="text-align:center;padding-top:20px;padding-bottom:10px;">
+      <input type="hidden" id="mode" name="mode" value="saveclonemenu"{xhtml}>
+      <input type="hidden" id="menu" name="menu" value="{menu_id}"{xhtml}>
+      <input type="submit" id="execute" name="execute" value="{$LANG_ST01[save]}"{xhtml}>&nbsp;&nbsp;
+      <input type="submit" id="cancel" name="cancel" value="{$LANG_ST01[cancel]}"{xhtml}>
+    </div>
+  </div>
+  </form>
+  </div>
